--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,23 +27,39 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-    - name: Set up Docker
-        uses: docker/build-push-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}  # Variable de entorno con tu nombre de usuario de Docker Hub
-          password: ${{ secrets.DOCKER_PASSWORD }}  # Variable de entorno con tu contraseña de Docker Hub
-          repository: southamerica-west1-docker.pkg.dev/taller-isw-2023s2/tisw  # Reemplaza con tu nombre de usuario y nombre de repositorio en Docker Hub
-          tags: latest  # Puedes personalizar las etiquetas
-
-      - name: Build and Test
-        run: |
-          docker build -t my-app-image .
-          docker run my-app-image go test ./...
-
-      - name: Push Docker Image
-        uses: docker/build-push-action@v2
+  push_to_registry:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: southamerica-west1-docker.pkg.dev/taller-isw-2023s2/tisw
-          tags: latest
+      
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: southamerica-west1-docker.pkg.dev/taller-isw-2023s2/tisw/
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
