--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  REGISTRY: southamerica-west1-docker.pkg.dev
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
 
@@ -46,7 +49,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: southamerica-west1-docker.pkg.dev/taller-isw-2023s2/tisw/
+          images: southamerica-west1-docker.pkg.dev/taller-isw-2023s2/tisw/${{ github.repository }}
       
       - name: Build and push Docker image
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
