--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,15 @@ on:
     branches: [ "main" ]
 
 env:
-  REGISTRY: southamerica-west1-docker.pkg.dev
-  IMAGE_NAME: ${{ github.repository }}
+  REGISTRY_HOST: southamerica-west1-docker.pkg.dev
+  REGISTRY_REPO: tisw
+  IMAGE_NAME: ${{ env.REGISTRY_HOST }}/${{ secrets.GKE_PROJECT }}/${{ env.REGISTRY_REPO }}/${{ github.repository }}
+  PROJECT_ID: ${{ secrets.GKE_PROJECT }}
+  GKE_CLUSTER: ${{ secrets.GKE_CLUSTER }}    # Add your cluster name here.
+  GKE_ZONE: us-east4   # Add your cluster zone here.
+  DEPLOYMENT_NAME: api-backend-gcp # Add your deployment name here.
+  IMAGE_TAG: ${{ steps.meta.outputs.tags }}
+
 
 jobs:
 
@@ -43,7 +50,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          registry: southamerica-west1-docker.pkg.dev
+          registry: ${{ env.REGISTRY }}
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -57,8 +64,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ env.IMAGE_TAG }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
@@ -66,5 +72,47 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ env.IMAGE_TAG }}
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    # Setup gcloud CLI
+    - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
+      with:
+        service_account_key: ${{ secrets.GKE_SA_KEY }}
+        project_id: ${{ secrets.GKE_PROJECT }}
+
+    # Configure Docker to use the gcloud command-line tool as a credential
+    # helper for authentication
+    - run: |-
+        gcloud --quiet auth configure-docker
+
+    # Get the GKE credentials so we can deploy to the cluster
+    - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
+      with:
+        cluster_name: ${{ env.GKE_CLUSTER }}
+        location: ${{ env.GKE_ZONE }}
+        credentials: ${{ secrets.GKE_SA_KEY }}
+
+    # Deploy the Docker image to the GKE cluster
+    - name: Deploy
+      run: |-
+        sed -i "s~{DEPLOYMENT_NAME}~${{ env.DEPLOYMENT_NAME }}~" deploy/k8s/prod/deployment.yaml
+        sed -i "s~{DEPLOYMENT_NAME}~${{ env.DEPLOYMENT_NAME }}~" deploy/k8s/prod/service.yaml
+        sed -i "s~{DEPLOYMENT_NAME}~${{ env.DEPLOYMENT_NAME }}~" deploy/k8s/prod/configmap.yaml
+        sed -i "s~{DEPLOYMENT_NAME}~${{ env.DEPLOYMENT_NAME }}~" deploy/k8s/prod/autoscaling.yaml
+        sed -i "s~{NAMESPACE}~${{ env.NAMESPACE }}~" deploy/k8s/prod/deployment.yaml
+        sed -i "s~{NAMESPACE}~${{ env.NAMESPACE }}~" deploy/k8s/prod/service.yaml
+        sed -i "s~{NAMESPACE}~${{ env.NAMESPACE }}~" deploy/k8s/prod/configmap.yaml
+        sed -i "s~{NAMESPACE}~${{ env.NAMESPACE }}~" deploy/k8s/prod/autoscaling.yaml
+        sed -i "s~{IMAGE_NAME}~${{ env.IMAGE_NAME }}~" deploy/k8s/prod/deployment.yaml
+        sed -i "s~{IMAGE_TAG}~${{ env.IMAGE_TAG }}~" deploy/k8s/prod/deployment.yaml
+        kubectl apply -f ./deploy/k8s/
+        kubectl rollout status deployment/$DEPLOYMENT_NAME
+        kubectl get services -o wide
