--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,12 +12,12 @@ on:
 env:
   REGISTRY_HOST: southamerica-west1-docker.pkg.dev
   REGISTRY_REPO: tisw
-  IMAGE_NAME: ${{ env.REGISTRY_HOST }}/${{ secrets.GKE_PROJECT }}/${{ env.REGISTRY_REPO }}/${{ github.repository }}
+  IMAGE_NAME: $REGISTRY_HOST/$GKE_PROJEC/$REGISTRY_REPO/${{ github.repository }}
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
   GKE_CLUSTER: ${{ secrets.GKE_CLUSTER }}    # Add your cluster name here.
   GKE_ZONE: us-east4   # Add your cluster zone here.
   DEPLOYMENT_NAME: api-backend-gcp # Add your deployment name here.
-  IMAGE_TAG: ${{ steps.meta.outputs.tags }}
+  IMAGE_TAG: $GITHUB_SHA
 
 
 jobs:
