--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,7 @@ jobs:
       run: go test -v ./...
 
   push_to_registry:
+    needs: [build]
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
@@ -50,7 +51,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          registry: ${{ env.REGISTRY }}
+          registry: ${{ env.REGISTRY_HOST }}
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -75,6 +76,7 @@ jobs:
           tags: ${{ env.IMAGE_TAG }}
 
   deploy:
+    needs: [push_to_registry]
     name: Deploy
     runs-on: ubuntu-latest
 
