fix problem conection

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,11 +85,16 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    
+    - id: 'auth-service-account'
+      uses: 'google-github-actions/auth@v1'
+      with:
+        credentials_json: '${{ secrets.GKE_SA_KEY }}'
+  
 
     # Setup gcloud CLI
     - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
       with:
-        service_account_key: ${{ secrets.GKE_SA_KEY }}
         project_id: ${{ secrets.GKE_PROJECT }}
 
     # Configure Docker to use the gcloud command-line tool as a credential
