--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,15 +67,6 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
   deploy:
     needs: [push_to_registry]
     name: Deploy
@@ -85,12 +76,11 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-    
+
     - id: 'auth-service-account'
       uses: 'google-github-actions/auth@v1'
       with:
         credentials_json: '${{ secrets.GKE_SA_KEY }}'
-  
 
     # Setup gcloud CLI
     - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
@@ -112,16 +102,16 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
-        sed -i "s~{DEPLOYMENT_NAME}~${{ env.DEPLOYMENT_NAME }}~" deploy/k8s/prod/deployment.yaml
-        sed -i "s~{DEPLOYMENT_NAME}~${{ env.DEPLOYMENT_NAME }}~" deploy/k8s/prod/service.yaml
-        sed -i "s~{DEPLOYMENT_NAME}~${{ env.DEPLOYMENT_NAME }}~" deploy/k8s/prod/configmap.yaml
-        sed -i "s~{DEPLOYMENT_NAME}~${{ env.DEPLOYMENT_NAME }}~" deploy/k8s/prod/autoscaling.yaml
-        sed -i "s~{NAMESPACE}~${{ env.NAMESPACE }}~" deploy/k8s/prod/deployment.yaml
-        sed -i "s~{NAMESPACE}~${{ env.NAMESPACE }}~" deploy/k8s/prod/service.yaml
-        sed -i "s~{NAMESPACE}~${{ env.NAMESPACE }}~" deploy/k8s/prod/configmap.yaml
-        sed -i "s~{NAMESPACE}~${{ env.NAMESPACE }}~" deploy/k8s/prod/autoscaling.yaml
-        sed -i "s~{IMAGE_NAME}~${{ env.REGISTRY_HOST }}/${{ env.PROJECT_ID }}/${{ env.REGISTRY_REPO }}/${{ env.DEPLOYMENT_NAME }}~" deploy/k8s/prod/deployment.yaml
-        sed -i "s~{IMAGE_TAG}~${{ env.IMAGE_TAG }}~" deploy/k8s/prod/deployment.yaml
+        sed -i "s~{DEPLOYMENT_NAME}~${{ env.DEPLOYMENT_NAME }}~" deploy/k8s/deployment.yaml
+        sed -i "s~{DEPLOYMENT_NAME}~${{ env.DEPLOYMENT_NAME }}~" deploy/k8s/service.yaml
+        sed -i "s~{DEPLOYMENT_NAME}~${{ env.DEPLOYMENT_NAME }}~" deploy/k8s/configmap.yaml
+        sed -i "s~{DEPLOYMENT_NAME}~${{ env.DEPLOYMENT_NAME }}~" deploy/k8s/autoscaling.yaml
+        sed -i "s~{NAMESPACE}~${{ env.NAMESPACE }}~" deploy/k8s/deployment.yaml
+        sed -i "s~{NAMESPACE}~${{ env.NAMESPACE }}~" deploy/k8s/service.yaml
+        sed -i "s~{NAMESPACE}~${{ env.NAMESPACE }}~" deploy/k8s/configmap.yaml
+        sed -i "s~{NAMESPACE}~${{ env.NAMESPACE }}~" deploy/k8s/autoscaling.yaml
+        sed -i "s~{IMAGE_NAME}~${{ env.REGISTRY_HOST }}/${{ env.PROJECT_ID }}/${{ env.REGISTRY_REPO }}/${{ env.DEPLOYMENT_NAME }}~" deploy/k8s/deployment.yaml
+        sed -i "s~{IMAGE_TAG}~${{ env.IMAGE_TAG }}~" deploy/k8s/deployment.yaml
         kubectl apply -f ./deploy/k8s/
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
