--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,8 @@ env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
   GKE_CLUSTER: ${{ secrets.GKE_CLUSTER }}    # Add your cluster name here.
   GKE_ZONE: us-east4   # Add your cluster zone here.
-  IMAGE_TAG: ${{ github.sha }}
+  #IMAGE_TAG: ${{ github.sha }}
+  IMAGE_TAG: ${{ github.ref_name }}
   NAMESPACE: tisw-prod
 
 
@@ -110,7 +111,7 @@ jobs:
         sed -i "s~{NAMESPACE}~${{ env.NAMESPACE }}~" deploy/k8s/service.yaml
         sed -i "s~{NAMESPACE}~${{ env.NAMESPACE }}~" deploy/k8s/configmap.yaml
         sed -i "s~{IMAGE_NAME}~${{ env.REGISTRY_HOST }}/${{ env.PROJECT_ID }}/${{ env.REGISTRY_REPO }}/${{ env.DEPLOYMENT_NAME }}~" deploy/k8s/deployment.yaml
-        sed -i "s~{IMAGE_TAG}~${{ steps.meta.outputs.tags }}~" deploy/k8s/deployment.yaml
+        sed -i "s~{IMAGE_TAG}~${{ env.IMAGE_TAG }}~" deploy/k8s/deployment.yaml
         kubectl apply -f ./deploy/k8s/
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
